force-app/main/default/objects/Case_Study_Contacts__c/Case_Study_Contacts__c.object-meta.xml
<CustomObject>
    <description>Links contacts with case studies</description>
    <label>Case Study Contact</label>
    <nameField>
        <displayFormat>CSC-{00000}</displayFormat>
        <label>Case Study Contacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Study Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>