force-app/main/default/objects/Case_Study_Contacts__c/fields/Case_Study__c.field-meta.xml
<CustomField>
    <fullName>Case_Study__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Study</label>
    <referenceTo>Case_Study__c</referenceTo>
    <relationshipLabel>Case Study Contacts</relationshipLabel>
    <relationshipName>Case_Study_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>