force-app/main/default/objects/Case_Study_Contacts__c/fields/Family_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Family_Member_Status__c</fullName>
    <formula>Contact__r.FamilyMemberStatus__c</formula>
    <label>Family Member Status</label>
    <type>Text</type>
</CustomField>