force-app/main/default/objects/Case_Study_Contacts__c/fields/Family_Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Family_Member_Type__c</fullName>
    <formula>TEXT(Contact__r.Family_Member_Type__c)</formula>
    <label>Family Member Type</label>
    <type>Text</type>
</CustomField>